force-app/main/default/objects/Change_Request_Log__c/Change_Request_Log__c.object-meta.xml
<CustomObject>
    <label>Change Request Log</label>
    <nameField>
        <displayFormat>CR-{0000000}</displayFormat>
        <label>Change Request Logs Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Request Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>