force-app/main/default/objects/Change_Request_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update Account Details</fullName>
            </value>
            <value>
                <fullName>Term Deposit From</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>