force-app/main/default/objects/Change_Request_Log__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ Record_Id__c , &apos;Open Record&apos;,&apos;_self&apos; )</formula>
    <label>Record</label>
    <type>Text</type>
</CustomField>