force-app/main/default/objects/Change_Request_Log__c/fields/Solarisbank_Id__c.field-meta.xml
<CustomField>
    <fullName>Solarisbank_Id__c</fullName>
    <label>Solarisbank Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>