force-app/main/default/objects/Change_Request_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUTHORIZATION_REQUIRED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>CONFIRMATION_REQUIRED</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>